sas-core/main/default/objects/Log__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <description>The duration in number of milliseconds since between the initialization of the log class in the transaction and the time when the log record was created. Is not set if the log class was not initialized.</description>
    <label>Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>