sas-core/main/default/objects/Log__c/fields/HttpBody__c.field-meta.xml
<CustomField>
    <fullName>HttpBody__c</fullName>
    <description>The HTTP body of logs generated by REST resources.</description>
    <label>HTTP Body</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>