sas-core/main/default/objects/Log__c/fields/HttpMethod__c.field-meta.xml
<CustomField>
    <fullName>HttpMethod__c</fullName>
    <description>The HTTP method of logs generated by REST resources.</description>
    <label>HTTP Method</label>
    <length>10</length>
    <type>Text</type>
</CustomField>