sas-core/main/default/objects/Log__c/fields/HttpQueryParameters__c.field-meta.xml
<CustomField>
    <fullName>HttpQueryParameters__c</fullName>
    <description>The HTTP query parameters of logs generated by REST resources.</description>
    <label>HTTP Query Parameters</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>