sas-core/main/default/objects/Log__c/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <description>The Unix Time in milliseconds when the log was created.</description>
    <label>Timestamp</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>